--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,10 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "type": "commonjs",
+  "scripts": {
+    "dev": "ts-node src/index.ts"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -17,9 +12,9 @@
     "express": "^5.2.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
-    "@types/node": "^25.0.6",
-    "nodemon": "^3.1.11",
+    "@types/node": "^20.11.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
