--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,12 +1,14 @@
 {
   "compilerOptions": {
-    "target": "ES2022",
     "module": "NodeNext",
+    "target": "ES2022",
     "moduleResolution": "NodeNext",
-    "strict": true,
-    "esModuleInterop": true,
+
     "resolveJsonModule": true,
-    "types": ["node"],
-    "skipLibCheck": true
+    "esModuleInterop": true,
+
+    "strict": true,
+    "skipLibCheck": true,
+    "types": ["node"]
   }
 }
